# midserm_rosCopy_1

mid-semester-exams-practicals-robottt/: .gitignore  .gitmodules  README.md  rover.urdf
mid-semester-exams-practicals-robottt/.devcontainer/: Dockerfile  devcontainer.json
mid-semester-exams-practicals-robottt/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mid-semester-exams-practicals-robottt/install/maze_energy/lib/maze_energy/: energy_node
mid-semester-exams-practicals-robottt/install/maze_energy/share/maze_energy/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
mid-semester-exams-practicals-robottt/install/rover_description/share/rover_description/: package.sh  package.xml
mid-semester-exams-practicals-robottt/install/rover_description/share/rover_description/launch/: display.launch.py  gazebo.launch.py
mid-semester-exams-practicals-robottt/install/rover_description/share/rover_description/rviz/: rover.rviz
mid-semester-exams-practicals-robottt/install/rover_description/share/rover_description/urdf/: rover.urdf.xacro
mid-semester-exams-practicals-robottt/log/: latest_build
mid-semester-exams-practicals-robottt/src/maze_energy/: package.xml  setup.py
mid-semester-exams-practicals-robottt/src/maze_energy/maze_energy/: energy_node.py
mid-semester-exams-practicals-robottt/src/maze_navigator/: package.xml  setup.py
mid-semester-exams-practicals-robottt/src/maze_navigator/config/: maze_config.yaml
mid-semester-exams-practicals-robottt/src/maze_navigator/launch/: maze.launch.py
mid-semester-exams-practicals-robottt/src/maze_navigator/maze_navigator/: navigator_node.py
mid-semester-exams-practicals-robottt/src/rover_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mid-semester-exams-practicals-robottt/src/rover_description/launch/: display.launch.py  gazebo.launch.py
mid-semester-exams-practicals-robottt/src/rover_description/urdf/: rover.urdf.xacro
midsem_repo_patch/mid-semester-exams-practicals-robottt/: PATCH_README.md
midsem_repo_patch/mid-semester-exams-practicals-robottt/original_user_files/: original_display.launch.py  original_energy_node.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_energy/: README.md  package.xml  setup.cfg  setup.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_energy/maze_energy/: energy_node.py  ledger.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_energy/test/: test_energy_ledger.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_navigation/: README.md  package.xml  setup.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_navigation/config/: maze_params.yaml
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_navigation/maze_navigation/: math_utils.py  maze_finder_node.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_navigation/test/: test_heading_math.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/maze_perception/: README.md  package.xml  setup.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/rover_description/: CMakeLists.txt  README.md  package.xml
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/rover_description/launch/: display.launch.py  gazebo.launch.py
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/rover_description/meshes/: README.txt
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/rover_description/rviz/: rover.rviz
midsem_repo_patch/mid-semester-exams-practicals-robottt/src/rover_description/urdf/: rover.urdf.xacro
rover_midsem_solution/rover_midsem_solution/: .gitignore  LICENSE  README.md
rover_midsem_solution/rover_midsem_solution/.devcontainer/: devcontainer.json
rover_midsem_solution/rover_midsem_solution/src/rover_bringup/: README.md  package.xml  setup.py
rover_midsem_solution/rover_midsem_solution/src/rover_bringup/config/: maze_params.yaml
rover_midsem_solution/rover_midsem_solution/src/rover_bringup/launch/: sim_maze.launch.py
rover_midsem_solution/rover_midsem_solution/src/rover_description/: CMakeLists.txt  README.md  package.xml
rover_midsem_solution/rover_midsem_solution/src/rover_description/launch/: display.launch.py
rover_midsem_solution/rover_midsem_solution/src/rover_description/meshes/: 59.stl  63.stl  70.stl
rover_midsem_solution/rover_midsem_solution/src/rover_description/rviz/: rover.rviz
rover_midsem_solution/rover_midsem_solution/src/rover_description/urdf/: rover.urdf.xacro
rover_midsem_solution/rover_midsem_solution/src/rover_energy/: README.md  package.xml  setup.cfg  setup.py
rover_midsem_solution/rover_midsem_solution/src/rover_energy/rover_energy/: energy_node.py  ledger.py
rover_midsem_solution/rover_midsem_solution/src/rover_energy/test/: test_energy_ledger.py
rover_midsem_solution/rover_midsem_solution/src/rover_navigation/: README.md  package.xml  setup.py
rover_midsem_solution/rover_midsem_solution/src/rover_navigation/rover_navigation/: maze_finder_node.py
rover_midsem_solution/rover_midsem_solution/src/rover_navigation/test/: test_heading_math.py
rover_midsem_solution/rover_midsem_solution/src/rover_perception/: README.md  package.xml  setup.py
rover_midsem_solution/rover_midsem_solution/src/rover_perception/rover_perception/: gem_detector_node.py
