<?xml version="1.0"?>
<package format="3">
  <name>maze_energy</name>
  <version>0.1.0</version>
  <description>Energy consumption tracking node for the ARC26 maze challenge</description>
  <maintainer email="mamadoufatchima15@gmail.com">ubuntu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>