<?xml version="1.0"?>
<package format="3">
  <name>maze_perception</name>
  <version>0.1.0</version>
  <description>Optional gem detector for the rover.</description>
  <maintainer email="david.orhin@ashesi.edu.gh">David Orhin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
