<?xml version="1.0"?>
<package format="3">
  <name>rover_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and parameter bundles for the CS353 rover.</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rover_description</exec_depend>
  <exec_depend>rover_navigation</exec_depend>
  <exec_depend>rover_energy</exec_depend>
  <exec_depend>rover_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
